Fix print formatting.
1. Ensure that formatting is not messed up when we print PDF.
2. Expand projects section, and refine experiences.

--- a/Sairam_Krishnan/MBA/Sairam_Krishnan_Resume.css
+++ b/Sairam_Krishnan/MBA/Sairam_Krishnan_Resume.css
@@ -2,17 +2,13 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
   background: #f5f5f5;
-  font-size: 14px;
+  font-size: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
-}
-
-p {
-  line-height: 1.5;
 }
 
 .wrapper {
@@ -63,18 +59,18 @@ p {
 .sidebar-wrapper .profile-container .contact-container {
   margin-left: -20px;
   margin-top: 20px;
-  margin-bottom: -20px;
+  margin-bottom: -30px;
   text-align: left;
 }
 
 .sidebar-wrapper .contact-list .svg-inline--fa {
   margin-right: 5px;
-  font-size: 16px;
+  font-size: 14px;
   vertical-align: middle;
 }
 
 .sidebar-wrapper .contact-list li {
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 }
 
 .sidebar-wrapper .contact-list .address {
@@ -90,14 +86,14 @@ p {
 
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .sidebar-wrapper .degree {
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 0;
   margin-bottom: 5px;
 }
@@ -111,7 +107,7 @@ p {
   font-weight: 500;
   margin-bottom: 0px;
   margin-top: 0;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .sidebar-wrapper .desc {
@@ -123,6 +119,7 @@ p {
 }
 
 .sidebar-wrapper .interests-list li {
+  font-size: 11.5px;
   margin-bottom: 5px;
 }
 
@@ -136,7 +133,7 @@ p {
 
 .main-wrapper .section-title {
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   color: #6e3852;
   position: relative;
@@ -160,7 +157,6 @@ p {
   background-clip: padding-box;
   background: #6e3852;
   text-align: center;
-  font-size: 16px;
   position: relative;
   top: -8px;
 }
@@ -182,7 +178,7 @@ p {
 
 .main-wrapper .job-title {
   color: #3F4650;
-  font-size: 16px;
+  font-size: 14px;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 500;
@@ -202,12 +198,23 @@ p {
 
 .main-wrapper .project-title {
   font-size: 14px;
-  font-weight: 500;
   margin-top: 0;
   margin-bottom: 5px;
+  font-weight: 500;
+}
+
+.main-wrapper .projects-section {
+  margin-bottom: -10px;
 }
 
 .main-wrapper .projects-section .row {
+  font-size: 11px;
   width: 750px;
+  margin-left: -35px;
   margin-bottom: 0px;
+}
+
+@page {
+  size: 8.5in 11in;
+  margin: 0 !important;
 }
